# ejemplo

./: .gitignore  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py  ui.py
data/: .gitignore
data/raw/: sample.csv.dvc  test.csv
metrics/: evaluation.json
models/: .gitignore  model.pkl  model_metadata.json
src/: data_prep.py  evaluate.py  train.py
tests/: test_data_quality.py
