[project]
name = "ejemplo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.61.0",
    "fastapi>=0.116.1",
    "mlflow>=3.1.4",
    "notebook>=7.4.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandera>=0.25.0",
    "plotly>=6.2.0",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.1",
    "streamlit-ace>=0.1.1",
]
